--- a/nic/Makefile
+++ b/nic/Makefile
@@ -4,4 +4,4 @@ active:
 	g++ active.cpp -o active.exe -ltins -lrt -lpthread 
 
 client:
-	gcc -o client.exe client.c ../secctp.c `pkg-config gnutls --cflags --libs` -lrt -lpthread -g
+	gcc -o client.exe client.c ../secctp.c `pkg-config gnutls --cflags --libs` -lrt -lpthread -lncurses
