--- a/server/Makefile
+++ b/server/Makefile
@@ -4,5 +4,5 @@ web:
 	gcc -o webserver/web.exe webserver/http.c -lmicrohttpd -lrt 
 
 server:
-	gcc -o server.exe server.c ../secctp.c `pkg-config gnutls --cflags --libs` -lrt -lpthread -g
+	gcc -o server.exe server.c ../secctp.c `pkg-config gnutls --cflags --libs` -lrt -lpthread 
 
