--- a/pc/Makefile
+++ b/pc/Makefile
@@ -1,2 +1,5 @@
 all: 
 	g++ -std=c++11 monitor.cpp -o monitor.exe -ltins -lboost_regex
+
+debug: 
+	g++ -std=c++11 -DDEBUG -g -fstack-protector-strong monitor.cpp -o monitor.exe -ltins -lboost_regex
