--- a/server/Makefile
+++ b/server/Makefile
@@ -6,3 +6,13 @@ web:
 server:
 	gcc -o server.exe server.c ../secctp.c `pkg-config gnutls --cflags --libs` -lrt -lpthread 
 
+debug: webddg serverdbg
+
+
+webddg:
+	gcc -DDEBUG -g -fstack-protector-strong -o webserver/web.exe webserver/http.c -lmicrohttpd -lrt 
+
+serverdbg:
+	gcc -DDEBUG -g -fstack-protector-strong -o server.exe server.c ../secctp.c `pkg-config gnutls --cflags --libs` -lrt -lpthread 
+
+
