fixed r-pi mem leak

--- a/nic/Makefile
+++ b/nic/Makefile
@@ -12,7 +12,7 @@ activedbg:
 	g++ -DDEBUG -g -fstack-protector-strong active.cpp -o active.exe -ltins -lrt -lpthread 
 
 clientdbg:
-	gcc -DDEBUG -g -fstack-protector-strong -o client.exe client.c ../secctp.c `pkg-config gnutls --cflags --libs` -lrt -lpthread -lncurses
+	gcc -DDEBUG -g -fstack-protector-strong -o client.exe client.c ../secctp.c `pkg-config gnutls --cflags --libs` -lrt -lpthread 
 
 
 
